--- a/Name_Matching.ipynb
+++ b/Name_Matching.ipynb
@@ -23,7 +23,7 @@
     "    def __init__(self, namestring): #Initialize the name from raw data, turn name into three parts\n",
     "        if ',' in namestring:\n",
     "            temp = namestring.split(', ')\n",
-    "            self.FP = temp[0].translate(None,punctuation)\n",
+    "            self.FP = temp[0].translate(None,punctuation).capitalize()\n",
     "            secondpart = temp[1].translate(None,punctuation)\n",
     "            if len(secondpart.split(' ')) > 1:\n",
     "                self.SP = secondpart.split(' ')[0]\n",
@@ -33,11 +33,11 @@
     "                self.MD = ''\n",
     "        elif ' ' in namestring:\n",
     "            temp = namestring.split(' ')\n",
-    "            self.FP = temp[0].translate(None,punctuation)\n",
+    "            self.FP = temp[0].translate(None,punctuation).capitalize()\n",
     "            self.SP = temp[1].translate(None,punctuation)\n",
     "            self.MD = ''\n",
     "        else:\n",
-    "            self.FP = namestring\n",
+    "            self.FP = namestring.capitalize()\n",
     "            self.SP = ' '\n",
     "            self.MD = ''\n",
     "    #Print the full name out\n",
@@ -2583,11 +2583,11 @@
     "    CisFP = Get_Match(x.FP.lower(),y.FP.lower())\n",
     "    CisSP = Get_Match(x.SP.lower(),y.SP.lower())\n",
     "\n",
-    "    if ((CisFP < 0.9 and CisSP < 0.9) or (x.SP[0] != y.SP[0])):\n",
+    "    if ((CisFP < 0.85 and CisSP < 0.85) or (x.SP[0] != y.SP[0])):\n",
     "        tag = 0\n",
     "    elif (CisFP == 1 and CisSP == 1):\n",
     "        tag = 3\n",
-    "    elif (CisFP >= 0.9 and CisSP >= 0.9):\n",
+    "    elif (CisFP >= 0.85 and CisSP >= 0.85):\n",
     "        tag = 1\n",
     "    return tag\n",
     "\n",
@@ -2783,7 +2783,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. Reload author and investigator data\n",
+    "### 4. Reload author and investigator data (After Impact Calculation)\n",
     "Load processed investigator data into a new class Investor. For investigator data was crawled form the ineternet, we should first remove all punctuations inside investor name fields. We don't want to deduplciate WoS a second time, so we just reload the author data saved in the last section."
    ]
   },
@@ -3700,15 +3700,8 @@
     }
    ],
    "source": [
-    "from string import punctuation\n",
-    "import difflib as dif\n",
-    "\n",
-    "Fileinput = open('D:/_Research/Project_Sharing_Data_FromLinux/ProjectRebuild_2017/Data/SiteInfo/InvestSite.txt')\n",
-    "Investors = []\n",
-    "for lines in Fileinput:\n",
-    "    temp = lines.replace('\\n','').split('|')\n",
-    "    Investors.append(Investor(temp[0].translate(None,punctuation),temp[1].split(',')))\n",
-    "Fileinput.close()\n",
+    "Investors = pd.read_csv('D:/_Research/Project_Sharing_Data_FromLinux/ProjectRebuild_2017/Data/SiteInfo/Invest_Site_Count.csv')\n",
+    "Investors = Investors.drop('Unnamed: 0', axis = 1)\n",
     "\n",
     "Authors = pd.read_csv('D:/_Research/Project_Sharing_Data_FromLinux/ProjectRebuild_2017/Data/Universal_Author_Scores.csv')\n",
     "Authors = Authors.drop('Unnamed: 0', axis = 1)\n",
@@ -3766,11 +3759,15 @@
     "    tg = input('Match or Not?\\n')\n",
     "    return(tg)\n",
     "\n",
-    "Sites = [[] for cols in range(len(Authors))]\n",
+    "#Remove Puncutations\n",
+    "temp = [item.translate(None,punctuation) for item in Investors.Name]\n",
+    "Investors['Name'] = temp\n",
     "\n",
-    "for num,invest in enumerate(Investors):\n",
-    "    cpvalue = 0\n",
-    "    record = 0\n",
+    "Sites = ['' for cols in range(len(Authors))]\n",
+    "Counts = [0 for cols in range(len(Authors))]\n",
+    "\n",
+    "for num,invest in Investors.iterrows():\n",
+    "    cpvalue, record = 0, 0\n",
     "    for i,author in Authors.iterrows():\n",
     "        temp = 0\n",
     "        for name in author.Names.replace(' |','|').split('|'):\n",
@@ -3778,15 +3775,19 @@
     "        if temp > cpvalue:\n",
     "            record = i\n",
     "            cpvalue = temp\n",
+    "        if len(author.Names) >= len(Authors.iloc[record].Names) and temp == 1: #Pick higher author in matching the name\n",
+    "            record = i\n",
     "            \n",
-    "    if cpvalue > 0.9:\n",
-    "        Sites[record].extend(invest.Sites)\n",
-    "        print(str(num) + ': ' + invest.Name + ' & ' + Authors.NameIndex[record] + '--------' + str(100*cpvalue) + '% Match!')\n",
+    "    if cpvalue > 0.8:\n",
+    "        Sites[record] += invest.Sites\n",
+    "        Counts[record] += invest.Count\n",
+    "        print(str(num) + ': ' + invest.Name + ' & ' + Authors.NameIndex[record] + '-----' + str(100*cpvalue) + '% Match!')\n",
     "    elif MannualCrossCheck(Authors.Names[record], invest):\n",
-    "        Sites[record].extend(invest.Sites)\n",
-    "        print(str(num) +  ': ' + invest.Name + ' & ' + Authors.NameIndex[record] + '--------' + str(100*cpvalue) + '% Match!')\n",
+    "        Sites[record] += invest.Sites\n",
+    "        Counts[record] += invest.Count\n",
+    "        print(str(num) +  ': ' + invest.Name + ' & ' + Authors.NameIndex[record] + '-----' + str(100*cpvalue) + '% Match!')\n",
     "    else:\n",
-    "        print(str(num) + ': ' + invest.Name + ' & ' + Authors.NameIndex[record] + '--------' + str(100*cpvalue) + '    Not Match!')\n",
+    "        print(str(num) + ': ' + invest.Name + ' & ' + Authors.NameIndex[record] + '-----' + str(100*cpvalue) + '% Not Match!')\n",
     "\n",
     "CSites = ['' for cols in range(len(Authors))]\n",
     "for index, item in enumerate(Sites):\n",
