Pruned and add codes of portal impact calculation

--- a/Data_visualization.ipynb
+++ b/Data_visualization.ipynb
@@ -1403,6 +1403,39 @@
    "source": [
     "MatrixView(10, 2, Data.AuthorTag)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Portal evaluation in supplemental mateirals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "Sites = pd.read_csv('D:/_Research/Project_Sharing_Data_FromLinux/ProjectRebuild_2017/Data/SiteInfo/Flux_Site_Processed.csv', encoding = u'utf-8')\n",
+    "Researcher = pd.read_csv('D:/_Research/Project_Sharing_Data_FromLinux/ProjectRebuild_2017/Data/SiteInfo/Researchers_Involved.csv', encoding = u'utf-8')\n",
+    "Sites = Sites.drop('Unnamed: 0', axis = 1)\n",
+    "\n",
+    "Researcher.Invested_Flux_Site = pd.Series([str(item).lower().split('|') for item in Researcher.Invested_Flux_Site])\n",
+    "DataAva = Sites.groupby('Network_Category').Data_Avail.sum()\n",
+    "TotalLR = [0 for index in range(len(Sites))]\n",
+    "\n",
+    "for index, item in enumerate(Sites.itertuples()):\n",
+    "    for people in Researcher.itertuples():\n",
+    "        if item.Code.lower() in people.Invested_Flux_Site:\n",
+    "            TotalLR[index] += people.LeaderRank_Score\n",
+    "\n",
+    "Sites.insert(0,'LRScore',TotalLR)\n",
+    "Sites = Sites.drop('Unnamed: 0', axis = 1)\n",
+    "Sites.to_csv('D:/_Research/Project_Sharing_Data_FromLinux/ProjectRebuild_2017/Data/SiteInfo/Flux_Site_Processed_20111217.csv', encoding = u'utf-8')\n",
+    "Portal_LRScore = Sites.groupby('Network_Category').LRScore.sum()"
+   ]
   }
  ],
  "metadata": {
