--- a/Raw_Data_Processing.ipynb
+++ b/Raw_Data_Processing.ipynb
@@ -31,13 +31,15 @@
     "\n",
     "class FluxSpider(scrapy.Spider):\n",
     "    name = \"fluxnet\"\n",
-    "    allowed_domains = [\"fluxnet.ornl.gov\", \"fluxnet.fluxdata.org\", \"fluxdata.org\", \"ameriflux.lbl.gov\", \"asiaflux.net\"]\n",
+    "    allowed_domains = [\"fluxnet.ornl.gov\", \"fluxnet.fluxdata.org\", \"fluxdata.org\", \"ameriflux.lbl.gov\", \"asiaflux.net\", \"europe-fluxdata.eu\",\"data.ozflux.org.au\"]\n",
     "    start_urls = [\n",
     "        \"https://fluxnet.ornl.gov/site_list/sitename/-\",          # ORNL Database Site List\n",
     "        \"http://fluxnet.fluxdata.org/sites/site-list-and-pages/\"  # LUXNET2015 Dataset Site List\n",
     "        \"http://www.fluxdata.org:8080/SitePages/\"                 # La Thuile Synthesis Dataset Site List\n",
     "        \"http://ameriflux.lbl.gov/sites/site-list-and-pages/\"     # Ameriflux Site List\n",
     "        \"http://asiaflux.net/?page_id=22\"                         # Asianflux Site List\n",
+    "        \"http://www.europe-fluxdata.eu/home/sites-list\"           # European Flux Database Cluster Site List\n",
+    "        \"http://data.ozflux.org.au/portal/pub/listPubCollections.jspx?pageNo=1&sizePerPage=200\" #OzFlux Site List\n",
     "                ]\n",
     "\n",
     "    def parse(self, response):\n",
@@ -58,7 +60,7 @@
    "metadata": {},
    "source": [
     "### 1.2 Data extraction and cleaning using Beautifulsoup\n",
-    "Beautifulsoup is quite efficient in extracting information form tabled webpages, we just inspected the source code of one page to seek for pattern, then applied this pattern to extraction codes, which would automatically deliever the values into right fields. There were two bunches of webpages coming from different sites, so we extract them seperately, and combined them together. Few 'br/'s exist in Investigators field, just define a function to delelte them. Let see how the table looks like."
+    "Beautifulsoup is quite efficient in extracting information form tabled webpages, we just inspected the source code of one page to seek for pattern, then applied this pattern to extraction codes, which would automatically deliever the values into right fields. There were bunches of webpages coming from different sites, so we extract them seperately, and combined them together. Few 'br/'s exist in Investigators field, just define a function to delelte them. Let see how the table looks like."
    ]
   },
   {
@@ -88,6 +90,10 @@
     "FluxORNLPos = 'D:/_Research/Project_Sharing_Data_FromLinux/ProjectRebuild_2017/Data/SiteInfo/FluxNet_Old_ORNL/'\n",
     "FluxPos = 'D:/_Research/Project_Sharing_Data_FromLinux/ProjectRebuild_2017/Data/SiteInfo/FLuxnet_2015Datasets/'\n",
     "LaThuilePos = 'D:/_Research/Project_Sharing_Data_FromLinux/ProjectRebuild_2017/Data/SiteInfo/LaThuile_SitePages/'\n",
+    "AmeriPos = 'D:/_Research/Project_Sharing_Data_FromLinux/ProjectRebuild_2017/Data/SiteInfo/AmeriFlux/'\n",
+    "AsiaPos = 'D:/_Research/Project_Sharing_Data_FromLinux/ProjectRebuild_2017/Data/SiteInfo/AsiaFlux/'\n",
+    "EFDCPos = 'D:/_Research/Project_Sharing_Data_FromLinux/ProjectRebuild_2017/Data/SiteInfo/EFDC/'\n",
+    "OzPos = 'D:/_Research/Project_Sharing_Data_FromLinux/ProjectRebuild_2017/Data/SiteInfo/OzFlux/'\n",
     "\n",
     "#ORNL Fluxnet site\n",
     "htmllist = ReturnList(FluxORNLPos)\n",
@@ -176,7 +182,35 @@
     "#    print 'Current Processing LaThu Datasets sites:', len(LaThuhtmltable)\n",
     "htmlmarker.close()\n",
     "\n",
-    "Full_Table = htmltable + Newhtmltable + LaThuhtmltable\n",
+    "#Regional Networks\n",
+    "htmllist = ReturnList(AmeriPos + AsiaPos + EDFCPos + OzPos)\n",
+    "Regionaltable = []\n",
+    "#Parser for extraction\n",
+    "for html in htmllist:\n",
+    "    htmlmarker = open(html)\n",
+    "    soup = BeautifulSoup(htmlmarker,'lxml')\n",
+    "    tables = soup.find_all('table') # Locate all tables\n",
+    "    Fluxinfo = tables[0].find_all('td')# Only one table left in New Files \n",
+    "    temp = {}\n",
+    "    temp.update({'SiteName':Fluxinfo[4].contents})\n",
+    "    temp.update({'Code':Fluxinfo[2].contents})\n",
+    "    temp.update({'Coordinates':(Fluxinfo[8].contents,Fluxinfo[10].contents)})\n",
+    "    temp.update({'Network':Fluxinfo[14].contents})\n",
+    "    \n",
+    "    data_avail = [Fluxinfo[24].contents[0].split(': ')[1].split(' (')[0], Fluxinfo[24].contents[2].split(': ')[1].split(' (')[0]]\n",
+    "    mx = max(int(data_avail[0]),int(data_avail[1]))\n",
+    "    temp.update({'Data_Availability':mx})\n",
+    "    \n",
+    "    Investors = []\n",
+    "    for Inves in Fluxinfo[6].find_all('a'):\n",
+    "        InvestName = Inves.contents[0].split(' -')[0] \n",
+    "        Investors.append(InvestName)\n",
+    "    temp.update({'Investigators':Investors})\n",
+    "    Regionaltable.append(temp)\n",
+    "#    print 'Current Processing LaThu Datasets sites:', len(LaThuhtmltable)\n",
+    "htmlmarker.close()\n",
+    "\n",
+    "Full_Table = htmltable + Newhtmltable + LaThuhtmltable + Regionaltable\n",
     "Full_Table = sorted(Full_Table, key = lambda item: item['Code'][0])\n",
     "x = pd.DataFrame.from_dict(Full_Table)\n",
     "\n",
